<resources>
    <string name="app_name">E-LEAVE</string>
    <string name="logout">LogOut</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="apply_leave">APPLY LEAVE</string>
    <string name="leave_details">LEAVE DETAILS</string>
    <string name="salary_details">SALARY DETAILS</string>
    <string name="faculty_id">Faculty Id</string>
    <string name="leave_type">Leave type</string>
    <string name="day_type">Day Type</string>
    <string name="reason">Reason</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="leaves_remaining">Leaves Remaining</string>
    <string name="leaves_taken">Leaves Taken</string>
    <string name="_30_days">30 days</string>
    <string name="total_no_of_working_days">Total No.of Working Days</string>
    <string name="basic_pay">Basic Pay</string>
    <string name="da">DA</string>
    <string name="hra">HRA</string>
    <string name="insurance">Insurance</string>
    <string name="total_salary">Total Salary</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="new_user">NEW USER</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="dept">Department</string>
    <string name="desig">Designation. eg: HOD, Asst. Professor</string>
    <string name="phone">Phone Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="help">Help</string>
    <string name="title_activity_send_help">SendHelp</string>
    <string name="your_name">Your Name</string>
    <string name="message_subject">Message Subject</string>
    <string name="query_here">Your Query Here</string>
    <string name="leaves_taken_">Leaves Taken:</string>
    <string name="sick">Sick</string>
    <string name="casual">Casual</string>
    <string name="maternity">Maternity</string>
    <string name="other">Other</string>
    <string name="leaves_remaining_">Leaves Remaining:</string>
    <string name="deducted">Amount Deducted</string>
</resources>
