<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_Facid"
            android:hint="@string/faculty_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorSecondaryTextColor"
            android:enabled="false"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave_type"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorSecondaryTextColor"/>
        <Spinner
            android:id="@+id/spinner_Leavetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryTextColor"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_type"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorSecondaryTextColor"/>
        <Spinner
            android:id="@+id/spinner_Leavedays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutFrom"
        android:layout_marginTop="5dp"
        >
        <EditText
            android:id="@+id/edt_From"
            android:layout_width="match_parent"
            android:inputType="date"
            android:hint="@string/dd_mm_yyyy"
            android:textSize="20sp"
            android:textColor="@color/colorSecondaryTextColor"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutTo"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_To"
            android:inputType="date"
            android:textSize="20sp"
            android:textColor="@color/colorSecondaryTextColor"
            android:hint="@string/dd_mm_yyyy"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutReason"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reson_edt"
            android:hint="@string/reason"
            android:lines="3"
            android:textSize="15sp"
            android:textColor="@color/colorSecondaryTextColor"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/buttonBarStyle"
            android:textSize="20sp"
            android:textColor="@color/colorTextColor"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:background="@color/colorButtonColor"
            android:id="@+id/btapplycancel"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:background="@color/colorButtonColor"
            android:textColor="@color/colorTextColor"
            android:text="@string/submit"
            android:id="@+id/btsubmit"/>
    </LinearLayout>

</LinearLayout>