<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="3"
    android:background="@color/colorBackground">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/btapplyleave"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@color/colorButtonColor"
        android:textColor="@color/colorTextColor"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/apply_leave"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/btleavedetails"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@color/colorButtonColor"
        android:textColor="@color/colorTextColor"
        android:textSize="25sp"
        android:text="@string/leave_details"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:id="@+id/btsalarydetails"
        android:background="@color/colorButtonColor"
        android:textSize="25sp"
        android:textColor="@color/colorTextColor"
        android:text="@string/salary_details"/>


</LinearLayout>