<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textSize="25sp"
            android:id="@+id/leavesTakenHeading"
            android:text="@string/leaves_taken_"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workingDaysLayout"
            android:layout_below="@id/leavesTakenHeading"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sick"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="@color/colorSecondaryTextColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:id="@+id/sickLeavesTextView"
                android:textColor="@color/colorSecondaryTextColor"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/casualLeavesTakenLayout"
            android:layout_below="@id/workingDaysLayout"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/casual"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryTextColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:id="@+id/casualLeavesTaken"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryTextColor"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/maternityLeavesTakenLayout"
            android:layout_below="@id/casualLeavesTakenLayout"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maternity"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryTextColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:id="@+id/maternityLeavesTaken"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryTextColor"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otherLeavesTakenLayout"
            android:layout_below="@id/maternityLeavesTakenLayout"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryTextColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:id="@+id/otherLeavesTaken"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryTextColor"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:id="@+id/divider"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_below="@id/otherLeavesTakenLayout"
            android:background="@color/colorButtonColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textSize="25sp"
            android:id="@+id/leavesRemainingHeading"
            android:text="@string/leaves_remaining_"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/remainingSickLeavesLayout"
            android:layout_below="@id/leavesRemainingHeading"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sick"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="@color/colorSecondaryTextColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:id="@+id/remainingSickLeavesTextView"
                android:textColor="@color/colorSecondaryTextColor"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/remainingCasualLeavesLayout"
            android:layout_below="@id/remainingSickLeavesLayout"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/casual"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryTextColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:id="@+id/remainingCasualLeaves"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryTextColor"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/ok"
            android:layout_below="@id/remainingCasualLeavesLayout"
            android:textColor="@color/colorTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/colorButtonColor"
            android:id="@+id/btdetailsok"/>

    </RelativeLayout>

</ScrollView>